# impose

./: .garbo.im  .gitignore  Cargo.toml  README.md  module.im  test.im
examples/text/: main.im
src/: align.rs  backend.rs  code_gen.rs  code_loc.rs  command_line.rs  error.rs  id.rs  intrinsic.rs  lexer.rs  main.rs  operator.rs  parser.rs  resource.rs  run.rs  scopes.rs  stack_frame.rs  typer.rs  types.rs
src/backend/: interp.rs
src/parser/: lexer.rs
test/: complex.im  std.im
test/std/: vec.im
tests/: allocate.im  buffers.im  control_flow.im  functions.im  simple.im
