[package]
name = "impose"
version = "0.1.0"
authors = ["johnm <trolledwoods@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
smallvec = { version = "1.4.2", features = ["union"] }
ustr = "0.7.0"
lazy_static = "1.4.0"
